# InstaLILY-Hackathon

./: .gitignore  Modelfile.agent  Modelfile.lipreader  PROJECT_PROMPT.md  README.md  app.py  demo_dashboard.py  demo_inference.py  finetune_gemma_agent.py  industrial_safety_200.jsonl  main.py  pyproject.toml  requirements-finetune.txt  requirements.txt  run_workflow_test.py  s1.mpg.tar  sample_inference.py
.streamlit/: config.toml
data/: synthetic_agent_data.jsonl
docs/: SETUP_FINETUNED_AGENT.md
fieldtalk/: __init__.py  agent_layer.py  context.py  inference.py  mouth_detection.py  phrase_mapper.py  reasoning.py  voice.py
finetuning/: IMPLEMENTATION_PLAN.md  LipAgent_Project_Overview (1).md  build_mosaics.py  config.py  download_grid.py  extract_frames.py  extract_mouth_rois.py  format_dataset.py  parse_alignments.py  run_pipeline.py  validate_dataset.py
models/: finetuned_agent.pt
scripts/: finetune_agent.py
training/: dataset.py  evaluate.py  requirements.txt  setup_env.sh  train.py
