[project]
name = "instalily-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ollama>=0.3.0",
    "faster-whisper>=1.2.1",
    "gdown>=5.2.1",
    "opencv-python>=4.13.0.92",
    "pyttsx3>=2.99",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.2.0",
]
