[project]
name = "instalily-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ollama>=0.3.0",
    "faster-whisper>=1.2.1",
    "gdown>=5.2.1",
    "opencv-python>=4.13.0.92",
    "pyttsx3>=2.99",
    "streamlit>=1.54.0",
    "torch>=2.0.0,<2.3",
    "torchvision>=0.15.0,<0.18",
    "transformers>=4.40.0",
    "mediapipe==0.10.14",
    "numpy>=2.2.6",
    "onnxruntime<1.20",
    "jax<0.5",
    "jaxlib<0.5",
]
